# emoji_pack

./: .gitignore  fluentui-emoji.py  pyproject.toml
