[tool.poetry]
name = "emoji-resourcepack"
version = "0.1.0"
description = ""
authors = ["eff3ry"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10.7"
requests = "^2.32.3"
tqdm = "^4.66.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
